[tool.poetry]
name = "face_modelling"
version = "0.1.0"
description = "Experimenting with methods face modelling for real world face data"
readme = "README.md"
authors = ["Rajat Rasal <rajatrasal6399@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.3.2", "poetry-plugin-export>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.*"
pre-commit = "^2.20"
opencv-python = "4.7.0.68"
tqdm = "4.64.1"
# numpy = "1.23.5"
# torch = "1.12.1"
# pytorch_lightning = "1.8.3.post0"
# lightning-bolts = "0.6.0.post1"
# torchmetrics = "0.11.0"
# pytorch-metric-learning = "1.6.3"
# tensorboard = "^2.11.0"
# pandas = "1.5.2"
# ray = {extras = ["default", "air"], version = "2.1.0"}
# seaborn = "0.12.1"
# kornia = "0.6.8"
# transformers = "4.25.1"
# torchdata = "0.4.*"
# torchtext = "0.13.*"
# datasets = "2.8.0" 
# boto3 = "1.26.*"
# #TODO: Move this into a separate group
# pebble = "5.0.3"
# warcio = "1.7.4"